--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           Our Hours
         </h1>
         <p class="fw-light pt-2">
-          Enjoy our delicious Vietnamese Coffee in the morning and have the warm feeling from eating some of our home-cooking
+          Enjoy our delicious Vietnamese Coffee in the morning and have the warm feeling from eating some of our home-cooking later in the afternoon.
         </p>
         <div class="ps-6">
           <button type="button" class="btn btn-dark rounded-pill white">
