--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a class="nav-item nav-link active" href="index.html">Home</a>
         <a class="nav-item nav-link active" href="Menu.html">Menu</a>
         <a class="nav-item nav-link active" href="Hours.html">Hours</a>
+        <a class="nav-item nav-link active" href="Contact.html">Contact Us</a>
       </div>
   </nav>
   <br>
@@ -98,12 +99,30 @@
   <br>
   <br>
   <br>
-  <footer class="bg-dark pt-4 pb-4 text-center">
+  <!-- Social -->
+  <div class="card bg-white text-white container">
+  <img src="Dessert.jpg">
+    <div class="card-img-overlay d-flex align-items-end">
+      <div>
+        <h1 class="fw-bold">
+          Follow Us @LiensTavernSF
+        </h1>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <!-- Footer -->
+  <footer class="bg-dark pt-4 pb-4 px-5">
     <small class="text-muted">
-      Terms of Use
-      Terms of Sale
-      Privacy Policy
-      CA Supply Chains Act
+      Location
+      <br>
+      901 Grant Ave
+      <br>
+      San Francisco, CA 94108
+      <br>
+      (510) 686-3129
     </small>
   </footer>
 </body>
