--- a/Hours.html
+++ b/Hours.html
@@ -17,6 +17,7 @@
         <a class="nav-item nav-link active" href="index.html">Home</a>
         <a class="nav-item nav-link active" href="Menu.html">Menu</a>
         <a class="nav-item nav-link active" href="Hours.html">Hours</a>
+        <a class="nav-item nav-link active" href="Contact.html">Contact Us</a>
       </div>
   </nav>
   <br>
@@ -33,5 +34,48 @@
   <div class="container">
     <img src="HOURSLOGO.png" class="rounded mx-auto d-block container-fluid" width="100px" alt="">
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <!-- Hours -->
+  <div class=" card container">
+    <img src="HoursPIC.png">
+  </div>
+  <br>
+  <br>
+  <br>
+  <!-- Location -->
+  <div class="card container">
+    <div class="card-body">
+      <h5 class="card-title">Location</h5>
+      <p class="card-text"> 901 Grant Ave, San Francisco, CA 94108 </p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d788.1940952543098!2d-122.40721717075593!3d37.795280058483144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f4ac6e93f7%3A0xf648cd82c1e45d47!2s901%20Grant%20Ave%2C%20San%20Francisco%2C%20CA%2094108!5e0!3m2!1sen!2sus!4v1633589745022!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
+    </div>
+  </div>
+  <!-- Footer -->
+  <footer class="bg-dark pt-4 pb-4 px-5">
+    <small class="text-muted">
+      Location
+      <br>
+      901 Grant Ave
+      <br>
+      San Francisco, CA 94108
+      <br>
+      (510) 686-3129
+    </small>
+  </footer>
 </body>
 </html>
