--- a/Menu.html
+++ b/Menu.html
@@ -17,7 +17,31 @@
         <a class="nav-item nav-link active" href="index.html">Home</a>
         <a class="nav-item nav-link active" href="Menu.html">Menu</a>
         <a class="nav-item nav-link active" href="Hours.html">Hours</a>
+        <a class="nav-item nav-link active" href="Contact.html">Contact Us</a>
       </div>
   </nav>
+  <br>
+  <br>
+  <!-- MenuLogo -->
+  <div class="card bg-white text-white container">
+    <img src="MenuImage.jpg">
+  </div>
+  <br>
+  <!-- Menu -->
+  <div class="container">
+    <img src="MENUFOOD.png" alt="">
+  </div>
+  <!-- Footer -->
+  <footer class="bg-dark pt-4 pb-4 px-5">
+    <small class="text-muted">
+      Location
+      <br>
+      901 Grant Ave
+      <br>
+      San Francisco, CA 94108
+      <br>
+      (510) 686-3129
+    </small>
+  </footer>
 </body>
 </html>
