--- a/Contact.html
+++ b/Contact.html
@@ -26,6 +26,7 @@
   <br>
   <br>
   <br>
+  <!-- Form -->
   <form class="container">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Name</label>
@@ -49,5 +50,17 @@
      <label class="form-check-label" for="exampleCheck1">I'm not a Robot lol</label>
     </div>
     <button type="submit" class="btn btn-dark rounded-pill white">Send</button>
-  </form>+
+  </form>
+  <!-- Footer -->
+  <footer class="bg-dark pt-4 pb-4 px-5">
+    <small class="text-muted">
+      Location
+      <br>
+      901 Grant Ave
+      <br>
+      San Francisco, CA 94108
+      <br>
+      (510) 686-3129
+    </small>
+  </footer>
 </body>
